claim submarine swap of btc+rgb
