# openapi.yaml
@@ -892,7 +892,64 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RgbInvoiceResponse'
+                $ref: '#/components/schemas/RgbInvoiceHtlcResponse'
+  /htlcclaim:
+    post:
+      tags:
+        - RGB
+      summary: Request HTLC claim
+      description: Validate the HTLC preimage and update the HTLC tracker entry to start claim processing.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HtlcClaimRequest'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmptyResponse'
+  /htlcscan:
+    post:
+      tags:
+        - RGB
+      summary: Scan HTLC funding
+      description: Scan the chain for HTLC funding UTXOs and update the tracker entry.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HtlcScanRequest'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmptyResponse'
+  /htlctracker:
+    post:
+      tags:
+        - RGB
+      summary: Get HTLC tracker entry
+      description: Get an HTLC tracker entry by payment hash.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HtlcTrackerRequest'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HtlcTrackerResponse'
   /sendasset:
     post:
       tags:
@@ -1421,7 +1478,7 @@ components:
     CheckProxyEndpointRequest:
       type: object
       properties:
-        proxy_url:
+        proxy_endpoint:
           type: string
           example: rpc://127.0.0.1:3000/json-rpc
     CloseChannelRequest:
@@ -2224,9 +2281,10 @@ components:
     RgbInvoiceHtlcRequest:
       type: object
       required:
-        - htlc_p2tr_script_pubkey
         - min_confirmations
-        - t_lock
+        - payment_hash
+        - user_pubkey
+        - csv
       properties:
         asset_id:
           type: string
@@ -2240,18 +2298,22 @@ components:
           example: 86400
         min_confirmations:
           type: integer
-          description: Minimum confirmations required (currently unused by this endpoint, reserved for future HTLC tracker)
+          description: Minimum confirmations required for HTLC funding UTXOs when scanning/claiming
           minimum: 0
           maximum: 255
           example: 1
-        htlc_p2tr_script_pubkey:
+        payment_hash:
           type: string
-          description: HTLC P2TR scriptPubKey in hex format
-          example: "51200f0c8db753acbd17343a39c2f3f4e35e4be6da749f9e35137ab220e7b238a667"
-        t_lock:
+          description: 32-byte hex payment hash (H)
+          example: "9f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65"
+        user_pubkey:
+          type: string
+          description: Compressed pubkey hex (refund key)
+          example: "02c1b3a2e4b0f3c2f2c0b1762a7b0b6a9c4ed9b6f7b5f2d0a1e2b3c4d5e6f7a8b9"
+        csv:
           type: integer
-          description: Absolute CLTV timelock block height used in the refund path
-          example: 210000
+          description: Relative CSV timelock in blocks; added to current chain height to derive the absolute CLTV refund height
+          example: 144
     RgbInvoiceResponse:
       type: object
       properties:
@@ -2267,6 +2329,147 @@ components:
         batch_transfer_idx:
           type: integer
           example: 1
+    RgbInvoiceHtlcResponse:
+      type: object
+      properties:
+        recipient_id:
+          type: string
+          example: bcrt:utxob:cbgHUJ4e-7QyKY4U-Jsj5AZw-oI0gxZh-7fxQY2_-tFFUAZN-4CgpX
+        invoice:
+          type: string
+          example: rgb:~/~/~/bcrt:utxob:cbgHUJ4e-7QyKY4U-Jsj5AZw-oI0gxZh-7fxQY2_-tFFUAZN-4CgpX?expiry=1695811760&endpoints=rpc://127.0.0.1:3000/json-rpc
+        expiration_timestamp:
+          type: integer
+          example: 1695811760
+        batch_transfer_idx:
+          type: integer
+          example: 0
+        htlc_p2tr_script_pubkey:
+          type: string
+          description: HTLC P2TR scriptPubKey in hex format
+          example: "51200f0c8db753acbd17343a39c2f3f4e35e4be6da749f9e35137ab220e7b238a667"
+    HtlcClaimRequest:
+      type: object
+      required:
+        - payment_hash
+        - preimage
+      properties:
+        payment_hash:
+          type: string
+          description: 32-byte hex payment hash
+          example: "9f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65"
+        preimage:
+          type: string
+          description: 32-byte hex preimage
+          example: "6f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65"
+    HtlcScanRequest:
+      type: object
+      required:
+        - payment_hash
+      properties:
+        payment_hash:
+          type: string
+          description: 32-byte hex payment hash
+          example: "9f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65"
+    HtlcTrackerRequest:
+      type: object
+      required:
+        - payment_hash
+      properties:
+        payment_hash:
+          type: string
+          description: 32-byte hex payment hash
+          example: "9f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65"
+    HtlcFundingDescriptorInfo:
+      type: object
+      properties:
+        txid:
+          type: string
+          example: 7c2c95b9c2aa0a7d140495b664de7973b76561de833f0dd84def3efa08941664
+        vout:
+          type: integer
+          example: 0
+        value_sat:
+          type: integer
+          example: 100000
+        utxo_kind:
+          type: string
+          enum:
+            - Vanilla
+            - Colored
+        asset_id:
+          type: string
+          example: rgb:CJkb4YZw-jRiz2sk-~PARPio-wtVYI1c-XAEYCqO-wTfvRZ8
+        assignment:
+          $ref: '#/components/schemas/Assignment'
+    HtlcTrackerEntryInfo:
+      type: object
+      properties:
+        payment_hash:
+          type: string
+          example: 9f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65
+        preimage:
+          type: string
+          example: 6f1c3a2db36b63c6a6a71e70a37fd7f95453a32f2c9c6938b8a3e2c9e0ed6f65
+        lp_pubkey_xonly:
+          type: string
+          example: 9b47a2dfc7d7b4a4a2c20f154fc2b8b56c5e2d47a90d0d2a6a0d37a9d9b690e1
+        user_pubkey_xonly:
+          type: string
+          example: 2f5b4d1d0f6e5a1c0b8f9c1c2a3b4c5d6e7f8091a2b3c4d5e6f708192a3b4c5d
+        lp_key_path:
+          type: string
+          example: m/86h/1h/0h/0/0
+        htlc_script_pubkey:
+          type: string
+          example: 51200f0c8db753acbd17343a39c2f3f4e35e4be6da749f9e35137ab220e7b238a667
+        recipient_id:
+          type: string
+          example: bcrt:utxob:cbgHUJ4e-7QyKY4U-Jsj5AZw-oI0gxZh-7fxQY2_-tFFUAZN-4CgpX
+        rgb_invoice:
+          type: string
+          example: rgb:~/~/~/bcrt:utxob:cbgHUJ4e-7QyKY4U-Jsj5AZw-oI0gxZh-7fxQY2_-tFFUAZN-4CgpX?expiry=1695811760&endpoints=rpc://127.0.0.1:3000/json-rpc
+        claim_tapscript_hex:
+          type: string
+          example: 20a1077fbf5d2c0a1d7b2ec7c93e3f7a1d61f0a9f7bfa8ef4a78cfa9f01f0d4cac
+        refund_tapscript_hex:
+          type: string
+          example: 20b1077fbf5d2c0a1d7b2ec7c93e3f7a1d61f0a9f7bfa8ef4a78cfa9f01f0d4cad
+        tapleaf_version:
+          type: integer
+          example: 192
+        control_block_hex:
+          type: string
+          example: c0ffee00
+        t_lock:
+          type: integer
+          example: 144
+        min_confirmations:
+          type: integer
+          example: 1
+        funding:
+          type: array
+          items:
+            $ref: '#/components/schemas/HtlcFundingDescriptorInfo'
+        status:
+          type: string
+          example: FundingDetected
+        asset_id:
+          type: string
+          example: rgb:CJkb4YZw-jRiz2sk-~PARPio-wtVYI1c-XAEYCqO-wTfvRZ8
+        assignment:
+          $ref: '#/components/schemas/Assignment'
+        btc_destination_script_hex:
+          type: string
+          example: 51200f0c8db753acbd17343a39c2f3f4e35e4be6da749f9e35137ab220e7b238a667
+        rgb_destination_script_hex:
+          type: string
+          example: 51200f0c8db753acbd17343a39c2f3f4e35e4be6da749f9e35137ab220e7b238a667
+    HtlcTrackerResponse:
+      type: object
+      properties:
+        entry:
+          $ref: '#/components/schemas/HtlcTrackerEntryInfo'
     SendAssetRequest:
       type: object
       properties:
